@@ -18,7 +18,7 @@ import de.ids_mannheim.korap.utils.JsonUtils;
  * @author margaretha
  *
  */
-@JsonInclude(Include.NON_EMPTY)
+@JsonInclude(Include.NON_DEFAULT)
 public class OAuth2UserClientDto {
     @JsonProperty("client_id")
     private String clientId;
@@ -34,6 +34,8 @@ public class OAuth2UserClientDto {
     private String redirect_uri;
     @JsonProperty("registration_date")
     private String registrationDate;
+    @JsonProperty("refresh_token_expiry")
+    private int refreshTokenExpiry;
     
     private boolean permitted;
     private JsonNode source;
@@ -46,7 +48,9 @@ public class OAuth2UserClientDto {
         this.setUrl(client.getUrl());
         this.setClientType(client.getType());
         this.setRedirect_uri(client.getRedirectURI());
-        
+        if (client.getType().equals(OAuth2ClientType.CONFIDENTIAL)) {
+            this.setRefreshTokenExpiry(client.getRefreshTokenExpiry());
+        }
         ZonedDateTime registrationDate = client.getRegistrationDate();
         if (registrationDate!=null) {
             this.setRegistrationDate(registrationDate.toString());
@@ -127,5 +131,12 @@ public class OAuth2UserClientDto {
     }
     public void setRegistrationDate (String registrationDate) {
         this.registrationDate = registrationDate;
+    }
+    
+    public int getRefreshTokenExpiry () {
+        return refreshTokenExpiry;
+    }
+    public void setRefreshTokenExpiry (int refreshTokenExpiry) {
+        this.refreshTokenExpiry = refreshTokenExpiry;
     }
 }
